made single product page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,6 +13,12 @@
     crossorigin="anonymous"
   />
     <title>E-shope</title>
+
+    <style>
+      body{
+        background-color: #f6f6f6;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
